--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp)
 
 add_library(raytracer ${RAYTRACER_SOURCES} ${RAYTRACER_HEADERS})
 target_include_directories(raytracer PUBLIC ../include)
-target_link_libraries(raytracer PUBLIC glm)
+target_link_libraries(raytracer PUBLIC glm stb_image_write)
