--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB_RECURSE RAYTRACER_HEADERS CONFIGURE_DEPENDS ../include/RayTracer/*.hpp)
+file(GLOB_RECURSE RAYTRACER_HEADERS CONFIGURE_DEPENDS ../include/raytracer/*.hpp)
 file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp)
 
 add_library(raytracer ${RAYTRACER_SOURCES} ${RAYTRACER_HEADERS})
