--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB_RECURSE RAYTRACER_HEADERS CONFIGURE_DEPENDS ../include/raytracer/*.hpp)
-file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp)
+file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp *.hpp)
 
 add_executable(raytracer ${RAYTRACER_SOURCES} ${RAYTRACER_HEADERS})
 target_include_directories(raytracer PRIVATE ../include)
 target_link_libraries(raytracer PRIVATE glm stb_image_write)
+target_compile_definitions(raytracer PRIVATE MULTITHREADING)
