--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,5 @@
-file(GLOB_RECURSE RAYTRACER_HEADERS CONFIGURE_DEPENDS ../include/raytracer/*.hpp)
-file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp *.hpp)
+file(GLOB_RECURSE RAYTRACER_SOURCES CONFIGURE_DEPENDS *.cpp *.hpp *.inc)
 
-add_executable(raytracer ${RAYTRACER_SOURCES} ${RAYTRACER_HEADERS})
-target_include_directories(raytracer PRIVATE ../include)
+add_executable(raytracer ${RAYTRACER_SOURCES})
 target_link_libraries(raytracer PRIVATE ${GLM_LIB} stb_image_write Threads::Threads)
 target_compile_definitions(raytracer PRIVATE MULTITHREADING)
