--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(glm REQUIRED)
 find_package(Threads REQUIRED)
 
-if (TARGET glm)
-  set(GLM_LIB glm)
-elseif (TARGET glm::glm)
-  set(GLM_LIB glm::glm)
-else ()
-  message(FATAL_ERROR "Do not know how to refer glm.")
-endif ()
+include(FetchContent)
+FetchContent_Declare(glm
+        GIT_REPOSITORY https://github.com/g-truc/glm
+        GIT_TAG 0.9.9.8)
+FetchContent_Populate(glm)
+add_subdirectory(${glm_SOURCE_DIR} ${glm_BINARY_DIR})
 
 add_subdirectory(extern)
 add_subdirectory(src)
