--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,11 @@ FetchContent_Declare(glm
         GIT_TAG 0.9.9.8)
 FetchContent_Populate(glm)
 add_subdirectory(${glm_SOURCE_DIR} ${glm_BINARY_DIR})
+FetchContent_Declare(tinyobjloader
+        GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader
+        GIT_TAG v2.0-rc1)
+FetchContent_Populate(tinyobjloader)
+add_subdirectory(${tinyobjloader_SOURCE_DIR} ${tinyobjloader_BINARY_DIR})
 
 add_subdirectory(extern)
 add_subdirectory(src)
