refactor cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Threads REQUIRED)
-find_package(embree 3.0 REQUIRED)
+file(GLOB EXTERN_LIBS LIST_DIRECTORIES true CONFIGURE_DEPENDS extern/*)
+foreach (EXTERN_LIB ${EXTERN_LIBS})
+    if (IS_DIRECTORY "${EXTERN_LIB}")
+        add_subdirectory("${EXTERN_LIB}")
+    else ()
+        include("${EXTERN_LIB}")
+    endif ()
+endforeach ()
 
-include(FetchContent)
-FetchContent_Declare(glm
-        GIT_REPOSITORY https://github.com/g-truc/glm
-        GIT_TAG 0.9.9.8)
-FetchContent_Populate(glm)
-add_subdirectory(${glm_SOURCE_DIR} ${glm_BINARY_DIR})
-FetchContent_Declare(tinyobjloader
-        GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader
-        GIT_TAG v2.0-rc1)
-FetchContent_Populate(tinyobjloader)
-add_subdirectory(${tinyobjloader_SOURCE_DIR} ${tinyobjloader_BINARY_DIR})
-
-add_subdirectory(extern)
 add_subdirectory(src)
